test_scripts/errors/dict_pair_wrong_length.shm
// dict() pairs must have exactly two elements.
let d = dict([(1, 2, 3)])
